feat(geo): parse verified pilot geometry with bounded immutable model